--- a/hb.html
+++ b/hb.html
@@ -20,7 +20,7 @@
                 бизнес
                 расцветал и ты тоже всегда расцветала. Чтоб близкие всегда были рядом и никогда не разочаровывали. И даже
                 если
-                нас разлучит расстояние вдруг когда-то, мы будем пидружками!
+                нас разлучит расстояние вдруг когда-то, мы будем пидружками! Я рада, что ты появилась и есть в моей жизни.
                 Люблю тебя!</p>
             <img src="img/unnamed.png" alt="" class="side-img">
         </div>
